<resources>
    <string name="app_name">Spoonify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favourites">Favourites</string>
    <string name="vegan">Vegan</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="drink">Drink</string>
    <string name="snack">Snack</string>
    <string name="marinade">Marinade</string>
    <string name="sauce">Sauce</string>
    <string name="beverage">Beverage</string>
    <string name="soup">Soup</string>
    <string name="breakfast">Breakfast</string>
    <string name="bread">Bread</string>
    <string name="salad">Salad</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="finger_food">Finger Food</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="keto">Keto</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="save_to_favourites">Save To Favourites</string>
    <string name="no_favourites">No Favourites</string>
    <string name="delete_favourite_menu">delete_favourite_menu</string>
    <string name="delete_all">delete all</string>
    <string name="spoonify">Spoonify</string>
</resources>