<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardBackgroundColor"
    tools:context=".ui.fragments.recipes.RecipesBottomSheet">

    <TextView
        android:id="@+id/tv_mealType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/meal_type"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/titleColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/sv_mealType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:scrollbars="none"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mealType">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">



            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup_mealType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:selectionRequired="true"
                app:singleLine="true"
                app:checkedChip="@id/chip_mainCourse"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    app:chipCornerRadius="30dp"
                    android:id="@+id/chip_mainCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_course" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    app:chipCornerRadius="30dp"
                    android:id="@+id/chip_sideDish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/side_dish" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    app:chipCornerRadius="30dp"
                    android:id="@+id/chip_appetizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appetizer" />


                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    app:chipCornerRadius="30dp"
                    android:id="@+id/chip_dessert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dessert" />


                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    app:chipCornerRadius="30dp"
                    android:id="@+id/chip_salad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salad" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    app:chipCornerRadius="30dp"
                    android:id="@+id/chip_bread"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bread" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    app:chipCornerRadius="30dp"
                    android:id="@+id/chip_breakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    app:chipCornerRadius="30dp"
                    android:id="@+id/chip_soup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soup" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    app:chipCornerRadius="30dp"
                    android:id="@+id/chip_beverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beverage" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    app:chipCornerRadius="30dp"
                    android:id="@+id/chip_sauce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sauce" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    app:chipCornerRadius="30dp"
                    android:id="@+id/chip_marinade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marinade" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    app:chipCornerRadius="30dp"
                    android:id="@+id/chip_snack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snack" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    app:chipCornerRadius="30dp"
                    android:id="@+id/chip_drink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drink" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    app:chipCornerRadius="30dp"
                    android:id="@+id/chip_fingerFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finger_food" />


            </com.google.android.material.chip.ChipGroup>



        </LinearLayout>


    </HorizontalScrollView>




    <TextView
        android:id="@+id/tv_dietType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="Diet Type"
        android:textColor="@color/titleColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_mealType" />





    <HorizontalScrollView
        android:id="@+id/sv_dietType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:scrollbars="none"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dietType">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup_dietType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:selectionRequired="true"
                app:singleLine="true"
                app:checkedChip="@id/chip_vegetarian"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    app:chipCornerRadius="30dp"
                    android:id="@+id/chip_vegetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegetarian" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    app:chipCornerRadius="30dp"
                    android:id="@+id/chip_keto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keto" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    app:chipCornerRadius="30dp"
                    android:id="@+id/chip_glutenFree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gluten_free" />


                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    app:chipCornerRadius="30dp"
                    android:id="@+id/chip_vegan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegan" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    app:chipCornerRadius="30dp"
                    android:id="@+id/chip_pescetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pescetarian" />



            </com.google.android.material.chip.ChipGroup>



        </LinearLayout>


    </HorizontalScrollView>

    <Button
        android:id="@+id/button_apply"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_dietType"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>